--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {},
   "homepage": "https://monmonplaza.github.com/architecture",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC"
