--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gh-pages": "^3.2.3"
   },
   "devDependencies": {},
-  "homepage": "https://monmonplaza.github.com/architecture",
+  "homepage": "https://monmonplaza.github.io/architecture",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gh-pages -d dist"
